# wsgi-echo-server

./: .gitignore  Dockerfile  README.md  pyproject.toml  wsgi_echo_server.py
.github/workflows/: docker-publish.yml  python-package.yml
docker/: Dockerfile  entrypoint.sh
tests/: conftest.py  test_request.py
