[tool.poetry]
name = "wsgi-echo-server"
version = "0.0.1"
description = ""
authors = ["Iuri de Silvio <iurisilvio@gmail.com>"]
readme = "README.md"
packages = [{include = "wsgi_echo_server.py"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
flask = "^2.2.3"
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
